--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,33 +59,33 @@ main {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
 
-.card_header,
-.card_content {
+.card-header,
+.card-content {
   padding: 1rem;
 }
 
-.card_header h1,
-.card_content h1,
-.card_content h2,
-.card_content p {
+.card-header h1,
+.card-content h1,
+.card-content h2,
+.card-content p {
   margin: 0;
 }
 
-.card_image {
+.card-image {
   width: 100%;
 }
 
-.card_image img {
+.card-image img {
   width: 100%;
 }
 
-.card_actions {
+.card-actions {
     padding: 1rem;
     text-align: center;
 }
 
-.card_actions button,
-.card_actions a {
+.card-actions button,
+.card-actions a {
     margin: 0 0.25rem;
 }
 
@@ -112,7 +112,7 @@ main {
   margin-bottom: 0.5rem;
 }
 
-.product__description {
+.product-description {
   text-align: center;
 }
 
@@ -131,4 +131,25 @@ main {
 .text {
   display: flex;
   justify-content: center;
+}
+
+.form-control {
+  margin: 1rem 0;
+}
+
+.form-control label,
+.form-control input {
+  display: block;
+  width: 100%;
+  margin-bottom: 0.25rem;
+}
+
+.form-control input {
+  border: 1px solid #a1a1a1;
+  font: inherit;
+  border-radius: 2px;
+}
+
+.form-control input:focus {
+  outline-color: #00695c;
 }
