implementing additional views

--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,4 +1,4 @@
-<%- include('_partials/_header.ejs')%>
+<%- include('../_partials/_header.ejs')%>
 
     <main>
       <form class="product-form" action="/admin/add-product" method="POST">
@@ -9,5 +9,5 @@
         <button type="submit">Add Product</button>
       </form>
     </main>
-<%- include('_partials/_footer.ejs')%>
+<%- include('../_partials/_footer.ejs')%>
 
