--- a/views/shop/productList.ejs
+++ b/views/shop/productList.ejs
@@ -1,4 +1,4 @@
-<%- include('_partials/_header.ejs')%>
+<%- include('../_partials/_header.ejs')%>
 
     <main>
       <% if(prods.length >0) { %>
@@ -25,5 +25,5 @@
         <h1>No products found!</h1>
       <% }%>
     </main>
-<%- include('_partials/_footer.ejs')%>
+<%- include('../_partials/_footer.ejs')%>
 
