new routes implememnted

--- a/views/shop/productList.ejs
+++ b/views/shop/productList.ejs
@@ -9,11 +9,11 @@
             <h1 class="product-title"><%= product.title %></h1>
           </header>
           <div class="card-image">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTPS7eVpg7O6b3kMxCffTKgCT9uoFBpx8fImQ&usqp=CAU">
+            <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
           </div>
           <div class="card-content">
-            <h2 class="product price">$19.99</h2>
-            <p class="product-description">Text test text test</p>
+            <h2 class="product price">$<%= product.price %></h2>
+            <p class="product-description"><%= product.description %></p>
           </div>
           <div class="card-actions">
             <button class="btn"> Add to cart</button>
