--- a/views/shop/productDetail.ejs
+++ b/views/shop/productDetail.ejs
@@ -1,7 +1,16 @@
 <%- include('../_partials/_header.ejs')%>
 
-<main>
-  
+<main class="centered">
+  <h1><%= product.title %></h1>
+  <hr>
+  <div>
+    <img src="<%= product.imgUrl %>" alt="<%= product.title %>">
+  </div>
+  <h2> <%= product.price  %></h2>
+  <p> <%= product.description  %></p>
+  <form action="/cart" method="POST">
+    <button class="btn" type="submit">Add to cart</button>
+  </form>
 </main>
 
 
