--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -16,9 +16,7 @@
         <p class="product-description"><%= product.description %></p>
       </div>
       <div class="card-actions">
-          <form action="/admin/deleteProduct" method="POST"> 
-            <button class="btn">Add to cart</button>
-          </form>
+          <%- include('../_partials/_addToCart.ejs', {product: product})%>
       </div>
     </article>
     <% } %>
