--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -1,8 +1,25 @@
 <%- include('../_partials/_header.ejs')%>
 
 <main>
-  
+  <form class="product-form" action="/admin/<% if (editing) {%> edit-product <%} else {%> add-product <%}%>" method="POST">
+    <div class="form-control">
+      <label for="title">Title</label>
+      <input type="text" name="title" id="title" value="<% if (editing) {%> <%= product.title%> <%}%>"/>
+    </div>
+    <div class="form-control">
+      <label for="imageUrl">Image</label>
+      <input type="text" name="imageUrl" id="imageUrl" value="<% if (editing) {%> <%= product.imageUrl%> <%}%>"/>
+    </div>
+    <div class="form-control">
+      <label for="description">Description</label>
+      <textarea type="text" name="description" id="description" rows="5"> <% if (editing) {%> <%= product.description %> <%}%> </textarea>
+    </div>
+    <div class="form-control">
+      <label for="price">Price</label>
+      <input type="number" name="price" id="price" step="0.01" value="<% if (editing) {%> <%= product.price %> <%}%>"/>
+    </div>
+    <button type="submit"><% if (editing) {%>Update Product<%} else {%>Add Product<%}%></button>
+  </form>
 </main>
-
 
 <%- include('../_partials/_footer.ejs')%>
