--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -16,9 +16,9 @@
           <p class="product-description"><%= product.description %></p>
         </div>
         <div class="card-actions">
-          <button href="/admin/editProduct" class="btn"> Edit</button>
-          <form action="/admin/deleteProduct" method="POST"> 
-            <button class="btn"> Delete</button>
+          <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn"> Edit</a>
+          <form action="/admin/delete-product" method="POST"> 
+            <button class="btn" type="submit"> Delete</button>
           </form>
         </div>
       </article>
