--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -1,7 +1,7 @@
 <%- include('../_partials/_header.ejs')%>
 
 <main>
-  <form class="product-form" action="/admin/<% if (editing) {%> edit-product <%} else {%> add-product <%}%>" method="POST">
+  <form class="product-form" action="/admin/<% if (editing) {%>edit-product<%} else {%>add-product<%}%>" method="POST">
     <div class="form-control">
       <label for="title">Title</label>
       <input type="text" name="title" id="title" value="<% if (editing) {%> <%= product.title%> <%}%>"/>
@@ -18,7 +18,10 @@
       <label for="price">Price</label>
       <input type="number" name="price" id="price" step="0.01" value="<% if (editing) { %><%= product.price %><% } %>">
     </div>
-    <button type="submit"><% if (editing) { %> Update Product <% } else { %> Add Product <% } %></button>
+    <% if (editing) {%>
+      <input type="hidden" value="<%= product.id %>" name="productId">
+    <% } %>
+    <button class="btn" type="submit"><% if (editing) { %> Update Product <% } else { %> Add Product <% } %></button>
   </form>
 </main>
 
