--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,7 +1,20 @@
 <%- include('../_partials/_header.ejs')%>
 
 <main>
-  
+  <% if (products.length > 0) { %>
+    <ul>
+        <% products.forEach( item => { %>
+          <li>
+            <p><%= item.productData.title %> (<%= item.qty %>)</p>
+            <form action="/cart-delete-item" method="POST">
+              <button class="btn" type="submit">DELETE</button>
+            </form>
+          </li>
+        <% }) %>
+    </ul>
+  <% } else { %>
+    <h1>No products in cart</h1>
+  <%}%>
 </main>
 
 
