Cart and Order Sequelized logic implemented, not optimal still

--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,7 +1,22 @@
 <%- include('../_partials/_header.ejs')%>
 
 <main>
+  <% if (orders.length > 0) { %>
+    <ul>
+        <% orders.forEach(order => { %>
+          <li>
+            <h1>Order # <%= order.id %></h1>>
+              <ul>
+                <% order.products.forEach(product => { %>
+                  <li><%= product.title %> (<%= product.orderItem.quantity %>)</li>
+                <%}); %>
+              </ul>
+          </li>
+        <% }) %>
+    </ul> 
+  <% } else { %>
     <h1>No products in here</h1>
+  <%}%>
 </main>
 
 
