--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -16,6 +16,7 @@
         <p class="product-description"><%= product.description %></p>
       </div>
       <div class="card-actions">
+          <a href="/products/<%= product._id %>" class='btn'>Details</a>
           <%- include('../_partials/_addToCart.ejs', {product: product})%>
       </div>
     </article>
