--- a/views/shop/productList.ejs
+++ b/views/shop/productList.ejs
@@ -16,7 +16,7 @@
         <p class="product-description"><%= product.description %></p>
       </div>
       <div class="card-actions">
-          <a href="/products/<%= product.id %>" class="btn">Details</a>
+          <a href="/products/<%= product._id %>" class="btn">Details</a>
           <%- include('../_partials/_addToCart.ejs', {product: product})%>
         </div>
     </article>
