--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -7,8 +7,8 @@
           <li>
             <h1>Order # <%= order.id %></h1>>
               <ul>
-                <% order.products.forEach(product => { %>
-                  <li><%= product.title %> (<%= product.orderItem.quantity %>)</li>
+                <% order.items.forEach(product => { %>
+                  <li><%= product.title %> (<%= product.quantity %>)</li>
                 <%}); %>
               </ul>
           </li>
