Cart and Order with Mongoose implemented

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -5,7 +5,7 @@
     <ul>
         <% products.forEach( item => { %>
           <li>
-            <p><%= item.productId.title %> (<%= item.productId.quantity %>)</p>
+            <p><%= item.productId.title %> (<%= item.quantity %>)</p>
             <form action="/cart-delete-item" method="POST">
               <input type="hidden" value="<%= item.productId._id %>" name="productId">
               <button class="btn" type="submit">DELETE</button>
