--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,8 +37,10 @@ main {
 
 .main-header-nav {
   height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .main-header-item-list {
   list-style: none;
