Login front-end logic pre-implemented

--- a/views/_partials/_header.ejs
+++ b/views/_partials/_header.ejs
@@ -20,7 +20,7 @@
           </ul>
           <ul class="main-header-item-list">
             <li class="main-header-item">
-              <a href='/login'>Login</a>
+              <a class="<%= path === '/login' ? 'active' : '' %>" href='/login'>Login</a>
             </li>
           </ul>
         </nav>
