--- a/views/_partials/_header.ejs
+++ b/views/_partials/_header.ejs
@@ -24,6 +24,11 @@
             <li class="main-header-item">
               <a class="<%= path === '/login' ? 'active' : '' %>" href='/login'>Login</a>
             </li>
+            <li class="main-header-item">
+              <form action="/logout" method="POST">
+                <button type="submit">Logout</button>
+              </form>
+            </li>
           </ul>
         </nav>
     </header>
