implemented adjustments in the front-end for the session permission

--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -17,7 +17,9 @@
       </div>
       <div class="card-actions">
           <a href="/products/<%= product._id %>" class='btn'>Details</a>
+          <% if(isAuthenticated) {%>
           <%- include('../_partials/_addToCart.ejs', {product: product})%>
+          <%}%>
       </div>
     </article>
     <% } %>
