--- a/views/_partials/_header.ejs
+++ b/views/_partials/_header.ejs
@@ -13,22 +13,26 @@
           <ul class="main-header-item-list">
             <li class="main-header-item"><a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a></li>
             <li class="main-header-item"><a class="<%= path === '/products' ? 'active' : '' %>"href="/products">Products</a></li>
+            <% if(isAuthenticated) {%>
             <li class="main-header-item"><a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a></li>
             <li class="main-header-item"><a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a></li>
-            <% if(isAuthenticated) {%>
               <li class="main-header-item"><a class="<%= path === '/admin/add-product' ? 'active' : '' %>"href="/admin/add-product">Add Product</a></li>
               <li class="main-header-item"><a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products</a></li>  
             <%}%>
           </ul>
           <ul class="main-header-item-list">
-            <li class="main-header-item">
+            <% if(!isAuthenticated) {%>
+              <li class="main-header-item">
               <a class="<%= path === '/login' ? 'active' : '' %>" href='/login'>Login</a>
             </li>
+            <%}%>
+            <% if(isAuthenticated) {%>
             <li class="main-header-item">
               <form action="/logout" method="POST">
                 <button type="submit">Logout</button>
               </form>
             </li>
+            <%}%>
           </ul>
         </nav>
     </header>
