--- a/views/_partials/_header.ejs
+++ b/views/_partials/_header.ejs
@@ -25,11 +25,10 @@
               <li class="main-header-item">
               <a class="<%= path === '/login' ? 'active' : '' %>" href='/login'>Login</a>
             </li>
-            <%}%>
-            <% if(isAuthenticated) {%>
+            <%} else {%>
             <li class="main-header-item">
               <form action="/logout" method="POST">
-                <button type="submit">Logout</button>
+                <button class="btn" type="submit">Logout</button>
               </form>
             </li>
             <%}%>
