--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -3,11 +3,11 @@
 <main>
   <form class="login-form" action="/login" method="POST">
     <div class="form-control">
-      <label for="email">Title</label>
+      <label for="email">Email</label>
       <input type="email" name="email" id="email"/>
     </div>
     <div class="form-control">
-      <label for="password">Image</label>
+      <label for="password">Password</label>
       <input type="password" name="password" id="password"/>
     </div>
     <button class="btn" type="submit">Login</button>
