Front-end base of authentication implemented

--- a/views/_partials/_header.ejs
+++ b/views/_partials/_header.ejs
@@ -24,7 +24,10 @@
             <% if(!isAuthenticated) {%>
               <li class="main-header-item">
               <a class="<%= path === '/login' ? 'active' : '' %>" href='/login'>Login</a>
-            </li>
+              </li>
+              <li class="main-header-item">
+                <a class="<%= path === '/signup' ? 'active' : '' %>" href='/signup'>Signup</a>
+              </li>
             <%} else {%>
             <li class="main-header-item">
               <form action="/logout" method="POST">
