--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,6 +1,9 @@
 <%- include('../_partials/_header.ejs')%>
 
 <main>
+  <% if (errorMessage) { %>
+  <div class='user-message'><%= errorMessage %></div>
+  <% } %>
   <form class="login-form" action="/login" method="POST">
     <div class="form-control">
       <label for="email">Email</label>
