--- a/views/auth/newPassword.ejs
+++ b/views/auth/newPassword.ejs
@@ -12,9 +12,7 @@
     <input type="hidden" name='password' value="<%= password %>">
     <input type="hidden" name='userId' value="<%= userId %>">
     <input type="hidden" name='_csrf' value="<%= csrfToken %>">
-    <button class="btn" type="submit">Login</button>
-  </form>
-  <div class="form-control">  <a href='/reset'>Reset Password</a></div>
+    <button class="btn" type="submit">Update Password</button>
 
 </main>
 
