--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -4,7 +4,7 @@
     <% if (errorMessage) { %>
       <div class='user-message'><%= errorMessage %></div>
     <% } %>
-  <form class="login-form" action="/signup" method="POST">
+  <form class="login-form" action="/signup" method="POST" novalidate>
     <div class="form-control">
       <label for="email">Email</label>
       <input type="email" name="email" id="email"/>
