Conditional Styling for error added.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -227,6 +227,10 @@ main {
   display: block;
 }
 
+.form-control input.invalid {
+  border-color: red
+}
+
 .user-message {
   margin: auto;
   width: 90%;
