--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -9,13 +9,13 @@
       <label for="email">Email</label>
       <input 
       class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>"
-      type="email" name="email" id="email"/>
+      type="email" name="email" id="email" value="<%= oldInput.email %>"/>
     </div>
     <div class="form-control">
       <label for="password">Password</label>
       <input 
       class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"
-      type="password" name="password" id="password"/>
+      type="password" name="password" id="password" value="<%= oldInput.password %>"/>
     </div>
     <input type="hidden" name='_csrf' value="<%= csrfToken %>">
     <button class="btn" type="submit">Login</button>
