Validation implemented, know issue over the ImageURL edit

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -227,7 +227,8 @@ main {
   display: block;
 }
 
-.form-control input.invalid {
+.form-control input.invalid,
+.form-control textarea.invalid {
   border-color: red
 }
 
